Closed
Bug 502724
Opened 16 years ago
Closed 14 years ago
crash [@ nsMsgLocalMailFolder::GetNewMessages(nsIMsgWindow*, nsIUrlListener*)]
Categories
(MailNews Core :: Backend, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 8.0
People
(Reporter: wsmwk, Assigned: rkent)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
858 bytes,
patch
|
Bienvenu
:
review+
|
Details | Diff | Splinter Review |
crash [@ nsMsgLocalMailFolder::GetNewMessages(nsIMsgWindow*, nsIUrlListener*)]
3.0b2 only?
no 3.0b3pre crashes in the past 2 months
spot checking - all the stacks are skimpy
bp-18bea8d4-6e4c-4c28-bcf4-adffc2090612 is the only one with comments
Por favor resolvam por favor meu problema de travamento
0 thunderbird.exe nsMsgLocalMailFolder::GetNewMessages nsLocalMailFolder.cpp:2238
1 thunderbird.exe nsMsgIncomingServer::GetNewMessages nsMsgIncomingServer.cpp:207
2 xpcom_core.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:101
3 thunderbird.exe XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2263
4 thunderbird.exe XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1477
5 js3250.dll js_Invoke js/src/jsinterp.cpp:1313
| Reporter | ||
Comment 1•16 years ago
|
||
per crash-stats this is almost never seen in nightlies, and rate in 3.0b3 is only about two per week.
| Reporter | ||
Comment 2•15 years ago
|
||
crash #244 for v3.1.3
per bp-e7480698-da03-4d05-86d4-8945a2100827 "I clicked on the "Compact Folders" item in the "File" menu, and everything in my "Inbox" (which was the open file) disappeared
0 thunderbird.exe nsMsgLocalMailFolder::GetNewMessages mailnews/local/src/nsLocalMailFolder.cpp:2313
1 thunderbird.exe nsMsgIncomingServer::GetNewMessages mailnews/base/util/nsMsgIncomingServer.cpp:206
2 xpcom_core.dll NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
3 thunderbird.exe XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2722
4 thunderbird.exe XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1740
5 js3250.dll js_Invoke js/src/jsinterp.cpp:1360
6 js3250.dll js_Interpret js/src/jsops.cpp:2240
7 js3250.dll js_Invoke js/src/jsinterp.cpp:1368
8 js3250.dll js_fun_call js/src/jsfun.cpp:1955
9 js3250.dll js_Interpret js/src/jsops.cpp:2208
10 js3250.dll js_Invoke js/src/jsinterp.cpp:1368
11 js3250.dll js_InternalInvoke js/src/jsinterp.cpp:1423
12 js3250.dll JS_CallFunction js/src/jsapi.cpp:5112
13 thunderbird.exe nsJSContext::CallEventHandler dom/base/nsJSEnvironment.cpp:2177
14 thunderbird.exe nsJSEventListener::HandleEvent dom/src/events/nsJSEventListener.cpp:266
15 thunderbird.exe nsEventListenerManager::HandleEventSubType content/events/src/nsEventListenerManager.cpp:1041
16 thunderbird.exe nsEventListenerManager::HandleEvent content/events/src/nsEventListenerManager.cpp:1147
Component: General → Backend
Product: Thunderbird → MailNews Core
QA Contact: general → backend
Crash Address 0x0
2282 NS_IMETHODIMP nsMsgLocalMailFolder::GetNewMessages(nsIMsgWindow *aWindow, nsIUrlListener *aListener)
2310 rv = localInbox->GetDatabaseWithReparse(nsnull, aWindow, getter_AddRefs(db));
2311 if (NS_SUCCEEDED(rv))
2312 {
2313 db->GetSummaryValid(&valid);
491 // url listener will get called when the url is done.
492 NS_IMETHODIMP nsMsgLocalMailFolder::GetDatabaseWithReparse(nsIUrlListener *aReparseUrlListener, nsIMsgWindow *aMsgWindow,
493 nsIMsgDatabase **aMsgDatabase)
494 {
495 nsresult rv = NS_OK;
505 if (!mDatabase)
506 {
521 nsresult folderOpen = msgDBService->OpenFolderDB(this, PR_TRUE,
522 getter_AddRefs(mDatabase));
523 if (folderOpen == NS_MSG_ERROR_FOLDER_SUMMARY_OUT_OF_DATE)
571 else if (folderOpen == NS_MSG_ERROR_FOLDER_SUMMARY_MISSING)
572 {
573 msgDBService->CreateNewDB(this, getter_AddRefs(mDatabase));
this can fail.
574 }
602 }
603 NS_IF_ADDREF(*aMsgDatabase = mDatabase);
here we will return NS_OK + null
604 return rv;
605 }
Updated•14 years ago
|
Crash Signature: [@ nsMsgLocalMailFolder::GetNewMessages(nsIMsgWindow*, nsIUrlListener*)]
| Reporter | ||
Comment 4•14 years ago
|
||
bienvenu, rkent, is comment 3 enough to produce a patch?
#229 crash for TB5
| Assignee | ||
Comment 5•14 years ago
|
||
This is the fix suggested by Timeless. It will probably just move the problem elsewhere, but it might stop the crash. But the fix is benign and matches current coding practice.
Comment 6•14 years ago
|
||
Comment on attachment 548194 [details] [diff] [review]
Fix issue noted by Timeless
seems reasonable.
Attachment #548194 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Comment 7•14 years ago
|
||
Comment on attachment 548194 [details] [diff] [review]
Fix issue noted by Timeless
Checked in as http://hg.mozilla.org/comm-central/rev/fcd97e93cea6
| Assignee | ||
Comment 8•14 years ago
|
||
I assume "FIXED" is correct, though there is some chance that this did not scratch the itch.
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Updated•14 years ago
|
Target Milestone: --- → Thunderbird 8.0
You need to log in
before you can comment on or make changes to this bug.
Description
•