bug 502724 - crash [@ nsMsgLocalMailFolder::GetNewMessages(nsIMsgWindow*, nsIUrlListener*)], r=bienvenu